--- a/server/api/appsettings.json
+++ b/server/api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppOptions":{
+    "DbConnectionString": "Server=ep-lucky-cloud-adwk0ppz-pooler.c-2.us-east-1.aws.neon.tech;DB=neondb;UID=neondb_owner;PWD=npg_6ApyaFOtoX8M;SslMode=require",
+    "JwTSecret":""
+  }
 }
