--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,17 +1,17 @@
-FROM mcr.microsoft.com/dotnet/sdk:9.0-preview AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
 WORKDIR /src
-COPY ["./","."]
+COPY ["./", "."]
 RUN dotnet publish "api/api.csproj" \
     -c Release \
     -o /app/publish \
-    --runtime linux-arm64 \
+    --runtime linux-musl-x64 \
     --self-contained true \
-    -p:PublishTrimmed=true
+    /p:PublishSingleFile=true
 
-FROM mcr.microsoft.com/dotnet/runtime-deps:9.0-preview AS runtime
+FROM mcr.microsoft.com/dotnet/runtime-deps:9.0-alpine
 WORKDIR /app
 COPY --from=build /app/publish .
 ENV ASPNETCORE_URLS=http://0.0.0.0:8080
-
 EXPOSE 8080
+
 ENTRYPOINT ["./api"]
