--- a/server/api/api.csproj
+++ b/server/api/api.csproj
@@ -1,13 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <ItemGroup>
-    <ProjectReference Include="..\efscaffold\efscaffold.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\efscaffold\efscaffold.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <PackageReference Include="NSwag.AspNetCore" Version="14.5.0" />
+    <PackageReference Include="NSwag.CodeGeneration.TypeScript" Version="14.5.0" />
+  </ItemGroup>
+
 
 </Project>
